Update PARROT Release Preview to 1.20
Adds support for Gradle to build 1.20 parrot builds.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-group=io.papermc.paper
-version=1.20-R0.1-SNAPSHOT
+group=com.zoey.parrotmc
+version=1.20-relPRE-12
 mcVersion=1.20
 
 org.gradle.caching=true
